--- a/DemoProjectguru99/test-output/old/Default suite/methods.html
+++ b/DemoProjectguru99/test-output/old/Default suite/methods.html
@@ -1,10 +1,16 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="b7f5ae">  <td>19/04/14 23:17:28</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;TestGuru99Login.setUp()[pri:0, instance:com.guru99.test.TestGuru99Login@6cc4c815]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@2009787198</td>   <td></td> </tr>
-<tr bgcolor="b7f5ae">  <td>19/04/14 23:18:18</td>   <td>49360</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestGuru99Login.testLogIn()[pri:0, instance:com.guru99.test.TestGuru99Login@6cc4c815]">testLogIn</td> 
-  <td>main@2009787198</td>   <td></td> </tr>
-<tr bgcolor="b7f5ae">  <td>19/04/14 23:18:31</td>   <td>62585</td> <td>&nbsp;</td><td title="&lt;&lt;TestGuru99Login.afterTest()[pri:0, instance:com.guru99.test.TestGuru99Login@6cc4c815]">&lt;&lt;afterTest</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@2009787198</td>   <td></td> </tr>
+<tr bgcolor="a57a9b">  <td>19/04/15 00:05:31</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;TestGuru99Login.setUp()[pri:0, instance:com.guru99.test.TestGuru99Login@46d56d67]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1694556038</td>   <td></td> </tr>
+<tr bgcolor="a57a9b">  <td>19/04/15 00:06:15</td>   <td>43954</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestGuru99Login.testLogIn(java.lang.String, java.lang.String)[pri:0, instance:com.guru99.test.TestGuru99Login@46d56d67]">testLogIn</td> 
+  <td>main@1694556038</td>   <td></td> </tr>
+<tr bgcolor="a57a9b">  <td>19/04/15 00:06:20</td>   <td>49363</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestGuru99Login.testLogIn(java.lang.String, java.lang.String)[pri:0, instance:com.guru99.test.TestGuru99Login@46d56d67]">testLogIn</td> 
+  <td>main@1694556038</td>   <td></td> </tr>
+<tr bgcolor="a57a9b">  <td>19/04/15 00:06:21</td>   <td>49841</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestGuru99Login.testLogIn(java.lang.String, java.lang.String)[pri:0, instance:com.guru99.test.TestGuru99Login@46d56d67]">testLogIn</td> 
+  <td>main@1694556038</td>   <td></td> </tr>
+<tr bgcolor="a57a9b">  <td>19/04/15 00:06:21</td>   <td>49882</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestGuru99Login.testLogIn(java.lang.String, java.lang.String)[pri:0, instance:com.guru99.test.TestGuru99Login@46d56d67]">testLogIn</td> 
+  <td>main@1694556038</td>   <td></td> </tr>
+<tr bgcolor="a57a9b">  <td>19/04/15 00:06:21</td>   <td>49929</td> <td>&nbsp;</td><td title="&lt;&lt;TestGuru99Login.afterTest()[pri:0, instance:com.guru99.test.TestGuru99Login@46d56d67]">&lt;&lt;afterTest</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1694556038</td>   <td></td> </tr>
 </table>
